force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Advance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Advance Payment does not apply to all Use cases. Use this feature only if the SOW has Advance payment as terms. This feature allows you to charge your client an advance payment and apply the %payment against future invoices</inlineHelpText>
    <label>Advance Payment</label>
    <type>Checkbox</type>
</CustomField>