force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Advance_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment_Terms__c</fullName>
    <inlineHelpText>If Advance payment is being used, this field determines the payment terms for the Initial Invoice. This need not be the same as regular invoice terms. The Invoice module uses this value to determine when the Advance Payment Invoice is due</inlineHelpText>
    <label>Advance Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Due Immediately</fullName>
            </value>
            <value>
                <fullName>Net 7</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Milestone Based</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>