force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Advance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Advance_Percentage__c</fullName>
    <inlineHelpText>Please enter the Percentage of Total SOW that is to be paid as Advance. The Advance payment Invoice is created for this value.</inlineHelpText>
    <label>Advance Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>