force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Average_Hourly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Average_Hourly_Cost__c</fullName>
    <description>The Average Hourly Cost for a Project.
Note: Goal is to ensure the higher cost resource spend less hours compared to junior team. If ratio is not maintained, this variable is influenced</description>
    <formula>Total_Budget_Allocated_Cost__c /  Total_Allocated_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Average Hourly Cost for a Project.
Note: Goal is to ensure the higher cost resource spend less hours compared to junior team. If ratio is not maintained, this variable is influenced.</inlineHelpText>
    <label>Average Hourly Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>