force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description>Frequency of Invoice Generation</description>
    <inlineHelpText>Frequency of Invoice Generation.  Default is Bi-Weekly. This should be setup to match the SOW with the customer</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
                <default>true</default>
                <label>Bi-Weekly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>