force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Budget_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Budget_Consumed__c</fullName>
    <description>This field populates the percentage of the Budget Consumed out of the Total Budget for the Project</description>
    <formula>Total_Budget_Consumed_Cost__c / Total_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field populates the percentage of the Budget Consumed out of the Total Budget for the Project</inlineHelpText>
    <label>% Budget Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>