force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Projects</relationshipLabel>
    <relationshipName>ClientProjects</relationshipName>
    <type>Lookup</type>
</CustomField>