force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Earned_Budget_at_Avg_Cost__c.field-meta.xml
<CustomField>
    <fullName>Earned_Budget_at_Avg_Cost__c</fullName>
    <description>The Earned Cost at Average Hourly Rate for the Project</description>
    <formula>Total_Earned_Hrs__c *  Average_Hourly_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Earned Cost at Average Hourly Rate for the Project</inlineHelpText>
    <label>Earned Budget at Avg Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>