force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Earned_Value__c.field-meta.xml
<CustomField>
    <fullName>Earned_Value__c</fullName>
    <description>This field is computed as Total Earned Hours/Total Hours consumed</description>
    <formula>Total_Earned_Hrs__c / Total_Consumed_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is computed as Total Earned Hours/Total Hours consumed</inlineHelpText>
    <label>Earned Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>