force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Earned_Value_for_Spend__c.field-meta.xml
<CustomField>
    <fullName>Earned_Value_for_Spend__c</fullName>
    <description>We used a lot of Budget to get the work done with higher cost resources. We used the budget in $ but not in hours. Earned value in $ is much lower than earned value in hours</description>
    <formula>Earned_Budget_at_Avg_Cost__c  /  Total_Budget_Consumed_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Earned Value at Average Cost with respect to Total Budget Spent</inlineHelpText>
    <label>Earned Value for Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>