force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Effort_Remaining1__c.field-meta.xml
<CustomField>
    <fullName>Effort_Remaining1__c</fullName>
    <description>The Effort Remaining in Hours to complete a Project</description>
    <formula>Total_Project_Hrs__c -  Total_Earned_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Effort Remaining in Hours to complete a Project</inlineHelpText>
    <label>Effort Hrs Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>