force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Actual_Vs_Planned__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Actual_Vs_Planned__c</fullName>
    <formula>HYPERLINK(&quot;/00O3k000008cJrlEAE?fv0=&quot;&amp;Id, &quot;Planned Vs Actuals&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Vs Planned</label>
    <type>Text</type>
</CustomField>