force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Allow_Self_Staffing__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Allow_Self_Staffing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Self-Staffing</label>
    <type>Checkbox</type>
</CustomField>