force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Allow_Timecards_Without_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Allow_Timecards_Without_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox allows creation of Global Projects. A Global Project allows users to enter time against the project without being allocated to the project. Create Global Project and Milestones for tracking time against PTO, Sick Days, Holidays ...</inlineHelpText>
    <label>Allow Timecards Without Assignment</label>
    <type>Checkbox</type>
</CustomField>