force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Billed__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billed__c</fullName>
    <description>Billed Amount is the Total dollar amount invoiced to the client for services and or expenses incurred on the project. The amount will initially be manually entered from quick books and eventually automated via an export from quick books.</description>
    <inlineHelpText>Billed Amount is the Total dollar amount invoiced to the client for services and or expenses incurred on the project. The amount will initially be manually entered from quick books and eventually automated via an export from quick books.</inlineHelpText>
    <label>PD Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>