force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Billing_Eligible_Expenses__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billing_Eligible_Expenses__c</fullName>
    <label>PD Billing Eligible Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>