force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billing_Type__c</fullName>
    <label>PD Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Time and Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>