force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Billings__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Billings__c</fullName>
    <description>Billed and Paid – Billings is the total amount paid by the client inclusive of services and expenses.</description>
    <inlineHelpText>Billed and Paid – Billings is the total amount paid by the client inclusive of services and expenses.</inlineHelpText>
    <label>PD Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>