force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Bookings__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Bookings__c</fullName>
    <description>Roll up for all opportunities – Bookings is the amount a customer commits to spend on the Project.</description>
    <formula>FPSA_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Roll up for all opportunities – Bookings is the amount a customer commits to spend on the Project.</inlineHelpText>
    <label>PD Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>