force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Budget_Used__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Budget_Used__c</fullName>
    <description>Revenue for Approved time and Above. Populated upon Timsheet trigger</description>
    <label>PD Budget Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>