force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Closed_for_Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Closed_for_Time_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field once checked will not allow any resource to log time against the project. Is part of Project Closing process. Please make sure all future allocations are zeroed out before checking this box. Else resources will see the timesheet without project name and will get error during Time submission.</inlineHelpText>
    <label>Closed for Time Entry</label>
    <type>Checkbox</type>
</CustomField>