force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Cost_Status__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Cost_Status__c</fullName>
    <inlineHelpText>This field is to define the status of the Project from Financial perspective only. If the remaining budget is not enough for completion of project and we may need a CR, the PM should select red or Yellow. They should also log a Financial specific Risk/Issue</inlineHelpText>
    <label>Project Financial Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>Red</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#33CC00</color>
                <label>Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>