force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Credited_Non_Billable_Int_Hrs__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Credited_Non_Billable_Int_Hrs__c</fullName>
    <label>PD Credited Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>