force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Daily_Timecard_Notes_Required__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Daily_Timecard_Notes_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this Checkbox is checked, during time entry for this project, the daily notes popup appears and there is validation to ensure daily notes are entered where hours &gt; 0. Select this option only if customer requests it or project is facing accountability challenges. It makes time entry a longer task</inlineHelpText>
    <label>Daily Timecard Notes Required</label>
    <type>Checkbox</type>
</CustomField>