force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Day_of_the_Week__c</fullName>
    <formula>MOD(TODAY() - DATE(1900, 1, 7), 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>