force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Duration_days__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Duration_days__c</fullName>
    <inlineHelpText>Project Duration Determines the Project End date. It also drives the number of weeks that show up in the Resource Allocation Screen</inlineHelpText>
    <label>Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>