force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Earned_Value__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Earned_Value__c</fullName>
    <formula>FPSA_Bookings__c *  MPM4_BASE__Percent_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>