force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_End_Date__c</fullName>
    <formula>FPSA_Start_Date__c +  FPSA_Duration_days__c</formula>
    <inlineHelpText>Project End date is calculated using the Project Start date and Duration</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>