force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Exclude_From_Billing__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Exclude_From_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PD Exclude From Billing</label>
    <type>Checkbox</type>
</CustomField>