force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Excluded_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Excluded_Hours__c</fullName>
    <label>Excluded Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>