force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Expense_Budget__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Expense_Budget__c</fullName>
    <description>Manually Entered by PM. The amount the client agrees to pay for expenses (Travel, Hotel, Meals, etc.)</description>
    <inlineHelpText>Manually Entered by PM. The amount the client agrees to pay for expenses (Travel, Hotel, Meals, etc.)</inlineHelpText>
    <label>PD Expense Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>