force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Expense_Costs__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Expense_Costs__c</fullName>
    <label>PD Expense Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>