force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_External_Costs__c.field-meta.xml
<CustomField>
    <fullName>FPSA_External_Costs__c</fullName>
    <description>Resources who are Contractors add their cost rate on resource * hrs for approved timelines. Populated from Timeentry trigger</description>
    <inlineHelpText>Contractor</inlineHelpText>
    <label>PD External Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>