force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_External_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>FPSA_External_Project_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>ID of project from Previous data Source</inlineHelpText>
    <label>PD FPSA External Project ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>