force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Fusion_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Fusion_Contact_Details__c</fullName>
    <inlineHelpText>Fusion Contact details to be entered here. This field shows up on System generated Project Status reports.</inlineHelpText>
    <label>Caelius Contact Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>