force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Include_In_Forecasting__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Include_In_Forecasting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Forecasting</label>
    <type>Checkbox</type>
</CustomField>