force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Internal_Costs__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Internal_Costs__c</fullName>
    <description>Actual Fusion Resource costs (for Fusion Employees) Cost Rate on Resource Object * Hrs on Timelines.Populated from Timeentry trigger</description>
    <inlineHelpText>Actual Fusion Resource costs (for Fusion Employees)</inlineHelpText>
    <label>PD Internal Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>