force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Internal_Time_Cost__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Internal_Time_Cost__c</fullName>
    <label>PD Internal Time Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>