force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Is_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is very important as it helps with Billable Projection for Utilization and Revenue Forecast</inlineHelpText>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>