force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Is_Template__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>