force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Lock_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Lock_Project_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lock the Start Date if Allocation has happened</description>
    <label>FPSA Lock Project Start Date</label>
    <type>Checkbox</type>
</CustomField>