force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Master_Project__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Master_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Project</label>
    <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
    <relationshipLabel>Projects (Master Project)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>