force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Milestone_required__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Milestone_required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this checkbox is true then time cannot be submitted without selecting the Milestone</description>
    <inlineHelpText>This checkbox ensures that During Time Submission the resource is forced to Pick a Milestone to log the time against. If a resource works on 3 milestones during a week, they should log three line of time. Best practice is one line for each project and Milestone combination. Project Financials are computed at Milestone Level as well</inlineHelpText>
    <label>Milestone Required for Time submission</label>
    <type>Checkbox</type>
</CustomField>