force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Non_Billable_Internal_Hours__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Non_Billable_Internal_Hours__c</fullName>
    <label>Non-Billable Hours (Internal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>