force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Notes__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>