force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>