force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
    <relationshipLabel>Projects (Parent Project)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>