force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project_ID__c</fullName>
    <displayFormat>P{000}</displayFormat>
    <inlineHelpText>System Generated Unique identifier for the project</inlineHelpText>
    <label>Project ID</label>
    <type>AutoNumber</type>
</CustomField>