force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project_Phase__c</fullName>
    <label>Project Phase</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FPSA_Project_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Kickoff</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Closed Successfully</fullName>
            </value>
            <value>
                <fullName>Closed with Issue</fullName>
            </value>
            <value>
                <fullName>Canceled and Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>