force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project_Stage__c</fullName>
    <inlineHelpText>Project Stage define the lifecycle of the project from inception to close. Select the stage as you naturally progress through the lifecycle</inlineHelpText>
    <label>Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Kickoff</fullName>
                <default>true</default>
                <label>Pre-Kickoff</label>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Design and Build</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Managed Service</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
                <isActive>false</isActive>
                <label>On-Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>