force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Project_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project_Status_Notes__c</fullName>
    <inlineHelpText>PM summary of project status notes. This shows up in the system generated status report of the project</inlineHelpText>
    <label>Project Status Notes</label>
    <type>TextArea</type>
</CustomField>