force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Project_Status_Report_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project_Status_Report_End_Date__c</fullName>
    <formula>TODAY() - FPSA_Day_of_the_Week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status Report End Date</label>
    <type>Date</type>
</CustomField>