force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Project_Status_Report_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Project_Status_Report_Start_Date__c</fullName>
    <formula>TODAY() - (FPSA_Day_of_the_Week__c + 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status Report Start Date</label>
    <type>Date</type>
</CustomField>