force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Revenue__c</fullName>
    <label>PD Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>