force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/FPSA_Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Schedule_Status__c</fullName>
    <inlineHelpText>This field is to define the status of the Project from Schedule perspective only. If the schedule is likely to change and CR is not yet issued, the PM should select red or Green. They should also log a Schedule specific Risk/Issue</inlineHelpText>
    <label>Project on Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>Red</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#33CC00</color>
                <label>Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>